# bisect

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  development.md  docker-compose.override.yml  docker-compose.yml  productionization.md  pyproject.toml  requirements.txt  run_tests.sh  runbook.md  scaling.md  security.md
alembic/: env.py
alembic/versions/: 20241218_000000_initial_schema.py  20241223_000000_drop_issue_number.py  20241223_000001_add_docker_image_column.py
app/: __init__.py  api.py  auth.py  bisect_core.py  bisect_runner.py  config.py  database.py  encryption.py  github_client.py  local_runner.py  main.py  models.py  security.py  streaming.py
app/static/: index.html
docker/: Dockerfile.runner
infrastructure/: README.md  secrets.example.yml
infrastructure/ansible/: ansible.cfg  site.yml
infrastructure/ansible/group_vars/: all.yml
infrastructure/ansible/inventory/: .gitkeep
infrastructure/ansible/roles/app/handlers/: main.yml
infrastructure/ansible/roles/app/tasks/: main.yml
infrastructure/ansible/roles/app/templates/: Caddyfile.j2  docker-compose.prod.yml.j2  env.j2
infrastructure/ansible/roles/autoscale/tasks/: main.yml
infrastructure/ansible/roles/backup/tasks/: main.yml
infrastructure/ansible/roles/common/tasks/: main.yml
infrastructure/ansible/roles/docker/handlers/: main.yml
infrastructure/ansible/roles/docker/tasks/: main.yml
infrastructure/ansible/roles/security/tasks/: main.yml
infrastructure/terraform/: main.tf
tests/: __init__.py  conftest.py  test_bisect_e2e.py  test_pytorch_bisect.py
(+1 files in other folders)
